# aurora-chain

./: Cargo.toml  cargo.toml
chain_data/: IDENTITY  LOG
src/: block.rs  chain.rs  db.rs  ledger.rs  main.rs  tx.rs  validator.rs  wallet.rs  wallet_io.rs
wallets/: aurora.json  genesis.json  sam.json
