[package]
name = "aurora-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.21"
serde = {version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
serde_json = "1.0.140"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rand = "0.7.3"
rand_core = "0.5.1"
chrono = "0.4"